More content and replace latex with markdown

--- a/dexy.yaml
+++ b/dexy.yaml
@@ -1,22 +1,57 @@
+# tex_images_as_png:
+#   - figs/*.tex|latex|pdf2png:
+#       - figs/*.csv  # Used in some tikz figures
+#       - pdf2png:
+#           res: 200
+
 tex_images_as_pdf:
-  - figs/*.tex|latex
+  - figs/*.tex|latex:
+      - figs/*.csv  # Used in some tikz figures
 
-tex_images_as_png:
-  - figs/*.tex|latex|pdf2png
-
+      
 # tex_images_as_svg:
+#   # - figs/sinr_1_ap_4_rooms.pdf|pdftosvg:
+#     - figs/hahaha.pdf|pdftosvg:
+#       - output-name: "/lala.svg"
+#       # - pdftocairo:
+#       #     ext: "svg"
 #   # - figs/*.tex|latex|pdf2svg
-#   - figs/*.pdf|pdf2cairo:
-#       - ext: "svg"
+#   # - figs/*.pdf|pdf2cairo:
+#   #     - ext: "svg"
 
+
+# # This will convert every pdf file in the figs folder to svg. Any tex
+# # file will also be processed by latex and the created pdf file will also
+# # be converted to pdf.
+convert_pdfs_figs_to_svg.sh|bash:
+  - figs/*.pdf
+  - tex_images_as_pdf
+  # - figs/*.tex|latex:
+  #     - figs/*.csv  # Used in some tikz figures
+  - contents: "cd figs && for i in *.pdf; do pdftocairo -svg $i; done"
+    # If we set output to 'true' we can see the output of running our
+    # script. Useful to check for latex errors
+  - output: false
+    # We tell dexy that pdf files created by running our script should be
+    # copied to the output directory
+  - bash:
+      add-new-files: svg
+
+      
 documento:
-  - sir_colormaps.tex|jinja|pandoc:
+  - sir_colormaps.md|jinja|pandoc|easyhtml:
       - figs/*.*
-      - tex_images_as_pdf
+      - tex_images_as_png
+      # - tex_images_as_pdf
       - jinja: {
           variables: {
             title: "SIR Colormaps",
             author: "Darlan Cavalcante Moreira",
-            imageExt: "pdf"}
+            imageExt: "svg"}
           }
-
+      - pandoc:
+          args: "-s -S"
+      - easyhtml:
+          # The images are contained in a div with class "figure". We set
+          # here the size to 10cm
+          css: ".figure img{ width:9cm; } .caption{position: relative; left: 100px; color:#4444FF; font-weight:bold;}"
